# blog

./: 404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/2025/09/13/project-update/: index.html
blog/2025/09/18/reflections-on-ruth/: index.html
blog/archive/2025/: index.html
blog/category/commentary/: index.html
blog/category/project-updates/: index.html
docs/: CNAME  index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2025-09-13-project-update.md  2025-09-18-ruth.md
search/: search_index.json
